--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/WhatLanguage.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/WhatLanguage.cshtml
@@ -3,7 +3,8 @@
 @{
 }
 
-<a asp-page="/OrganisationAdmin/WhoFor" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" class="govuk-back-link">Back</a>
+<a asp-page="/OrganisationAdmin/WhoFor" class="govuk-back-link">Back</a>
+@*<a asp-page="/OrganisationAdmin/WhoFor" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" class="govuk-back-link">Back</a>*@
 
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <div class="govuk-grid-row">
@@ -14,7 +15,7 @@
 
                         <h2 class="govuk-heading-l moj-add-another__heading" tabindex="-1">Which language is the service offered in?</h2>
 
-                        <input asp-for="@Model.StrOrganisationViewModel" type="hidden">
+                        @*<input asp-for="@Model.StrOrganisationViewModel" type="hidden">*@
                         <input asp-for="@Model.LanguageNumber" type="hidden">
 
                         @for (int i = 0; i < @Model.LanguageNumber; i++)
