--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ViewServices.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ViewServices.cshtml
@@ -30,27 +30,57 @@
                     {
                         <tr class="govuk-table__row">
                             <td class="govuk-table__cell">@item.Name</td>
-                            <td class="govuk-table__cell">
-                                <a asp-page="/OrganisationAdmin/ServiceName" asp-route-organisationid="@Model.OrganisationViewModel.Id" asp-route-serviceid="@item.Id" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" asp-route-id="@item.Id" style="color:blue" class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-16">Edit</a>
-                                <a href="#" class="govuk-!-margin-right-0">Delete</a>
+                            <td class="govuk-table__cell" style="text-align: right">
+                                <a asp-page="/OrganisationAdmin/ServiceName" asp-route-organisationid="@Model.OrganisationViewModel.Id" asp-route-serviceid="@item.Id" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" asp-route-id="@item.Id" class="govuk-!-margin-right-1">Edit</a>                                @*<a href="#" class="govuk-!-margin-right-0">Delete</a>*@
+                                <a asp-page="/OrganisationAdmin/DeleteService" asp-route-organisationid="@Model.OrganisationViewModel.Id" asp-route-serviceid="@item.Id" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" asp-route-id="@item.Id" class="govuk-!-margin-right-0">Delete</a>
                             </td>
                         </tr>
                     }
 
-                    @*<tr class="govuk-table__row">
-                    <td class="govuk-table__cell">Bouncers Parent And Toddler Group</td>
-                    <td class="govuk-table__cell" style="text-align: right">
-                    <a href="view-edit" class="govuk-!-margin-right-1">View</a>
-                    <a href="remove-service" class="govuk-!-margin-right-0">Delete</a>
-                    </td>
-                    </tr>
-                    <tr class="govuk-table__row">
-                    <td class="govuk-table__cell">Praxis</td>
-                    <td class="govuk-table__cell" style="text-align: right">
-                    <a href="#" class="govuk-!-margin-right-1">View</a>
-                    <a href="#" class="govuk-!-margin-right-0">Delete</a>
-                    </td>
-                    </tr>*@
+                    <!--<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
+
+
+                        <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-two-thirds">
+                                <h1 class="govuk-heading-xl">Manage your services</h1>
+                                <p>View, change or delete services you have added to the directory.</p>
+                            </div>
+                        </div>
+
+                        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+
+                        <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+                                <table class="govuk-table">
+                                    <caption class="govuk-table__caption govuk-table__caption--m">Your services</caption>
+                                    <thead class="govuk-table__head">
+                                        <tr class="govuk-table__row">
+                                            <th scope="col" class="govuk-table__header">Service</th>
+                                            <th scope="col" class="govuk-table__header"></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody class="govuk-table__body">
+                                        <tr class="govuk-table__row">
+                                            <td class="govuk-table__cell">Bouncers Parent And Toddler Group</td>
+                                            <td class="govuk-table__cell" style="text-align: right">
+                                                <a href="view-edit" class="govuk-!-margin-right-1">View</a>
+                                                <a href="remove-service" class="govuk-!-margin-right-0">Delete</a>
+                                            </td>
+                                        </tr>
+                                        <tr class="govuk-table__row">
+                                            <td class="govuk-table__cell">Praxis</td>
+                                            <td class="govuk-table__cell" style="text-align: right">
+                                                <a href="#" class="govuk-!-margin-right-1">View</a>
+                                                <a href="#" class="govuk-!-margin-right-0">Delete</a>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+
+
+                    </main>-->
                 </tbody>
             </table>
         </div>
