--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ViewServices.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ViewServices.cshtml
@@ -32,7 +32,7 @@
                             <td class="govuk-table__cell">@item.Name</td>
                             <td class="govuk-table__cell" style="text-align: right">
                                 <a asp-page="/OrganisationAdmin/ServiceName" asp-route-organisationid="@Model.OrganisationViewModel.Id" asp-route-serviceid="@item.Id" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" asp-route-id="@item.Id" class="govuk-!-margin-right-1">Edit</a>                                @*<a href="#" class="govuk-!-margin-right-0">Delete</a>*@
-                                <a asp-page="/OrganisationAdmin/DeleteService" asp-route-organisationid="@Model.OrganisationViewModel.Id" asp-route-serviceid="@item.Id" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel" asp-route-id="@item.Id" class="govuk-!-margin-right-0">Delete</a>
+                                <a asp-page="/OrganisationAdmin/DeleteService" asp-route-organisationid="@Model.OrganisationViewModel.Id" asp-route-serviceid="@item.Id" class="govuk-!-margin-right-0">Delete</a>
                             </td>
                         </tr>
                     }
