--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ServiceDeliveryType.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ServiceDeliveryType.cshtml
@@ -18,6 +18,21 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <form method="post">
+                @if (Model.ValidationValid == false)
+                {
+                    <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" data-module="govuk-error-summary">
+                        <h2 class="govuk-error-summary__title" id="error-summary-title">
+                            There is a problem
+                        </h2>
+                        <div class="govuk-error-summary__body">
+                            <ul class="govuk-list govuk-error-summary__list">
+                                <li>
+                                    <a href="#inperson">You must select one or more options</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                }
                 <div class="govuk-form-group @(Model.ValidationValid == false ? "govuk-form-group--error" : "")">
                     <fieldset class="govuk-fieldset">
                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -26,8 +41,6 @@
                             </h1>
                         </legend>
                     </fieldset>
-
-                    @*<input asp-for="@Model.StrOrganisationViewModel" type="hidden">*@
 
                     <div class="govuk-form-group">
                         <div id="delivery-hint" class="govuk-hint">
