Added field level validation to TypeOfService

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/TypeOfService.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/TypeOfService.cshtml
@@ -31,6 +31,13 @@
                                 Select all that apply.
                             </div>
                             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+                                @if (!ModelState.IsValid)
+                                {
+                                    <p class="govuk-error-message">
+                                        <span class="govuk-visually-hidden">Error:</span>
+                                        <span asp-validation-for="@Model.TaxonomySelection"></span>
+                                    </p>
+                                }
                                 @foreach (var item in @Model.OpenReferralTaxonomyRecords)
                                 {
                                     <div class="govuk-checkboxes__item">
